tests/NormalTests/paczka1/fuzzy1/80458862.err
Error in line 22: PYpl3h S733 0,5
Error in line 18: 5jt5 A321 294,7
Error in line 23: PYpl3h S827 26,7
Error in line 34: Onvysr A321 54,6
